<resources>
    <string name="app_name">FoalEd</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Settings titles -->
    <string name="side_nav_profile">My Profile</string>
    <string name="side_nav_notifications">Notifications</string>
    <string name="side_nav_horses">My Horses</string>
    <string name="title_activity_new_horse">Add Horse</string>

    <!--Horse notificationMessage-->
    <string name="horse_age">%1$s old</string>
    <string name="pregnancy_left_time">Approx. %1$s left till birth!</string>

    <string name="cancel">Cancel</string>

    <!-- Screen names -->
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_notification_settings">Notification Settings</string>
    <string name="title_activity_add_new_horse">Add New Horse</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="query">Query</string>
    <string name="delete">Delete</string>
    <string name="database_results">Database results</string>
    <string name="table">Table</string>
    <string name="insert">Add</string>
    <string name="remove_table">Remove Table</string>
    <string name="facebook_app_id">699311710219758</string>
    <string name="edit_fields">Edit Fields</string>
    <string name="dob">Date of Birth</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="breed">Breed</string>
    <string name="mare">Mare</string>
    <string name="status">Status</string>
    <string name="location">Location</string>
    <string name="image">Image</string>
    <string name="update">Update</string>
    <string name="dialog_ok">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="male">Make</string>
    <string name="female">Female</string>
    <string name="colour">Colour</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <!--About Us Page-->
    <string name="About.Title">FoalEd</string>
    <string name="About.Content">At FoalEd we’re passionate about supporting you and building your confidence in all things foalings, so we can help you to give your foals the best possible start to life.\n\n<a href='www.foaled.co.nz'>www.foaled.co.nz</a>\n\nFounder and Trainer Ashleigh Davis has over 15 years experience working with horses, the last 10 years primarily across the Thoroughbred sector in New Zealand.\n\nAshleigh studied at Massey University in New Zealand and holds a Bachelor of Applied Science with a major in Equine Studies, as well as a Graduate Diploma in Business with a major in Human Resource Management.</string>
    <string name="About.Dev.Content">Christie and Brendan are developers living in Wellington. We are passionate about learning and mobile development. Our git accounts are ....</string>

    <!--FAQ Page-->

    <string name="FAQ.header">If you can\'t find the answer to your question here please feel free to get in touch by emailing info@foaled.co.nz or check out our Facebook page.</string>
    <string name="FAQ.Q1.Title">IT SEEMS QUITE EXPENSIVE – WHY DOES IT COST WHAT IT DOES?</string>
    <string name="FAQ.Q1.Message">\nInitially it may seem expensive but when you consider that you happily pay up to $150+ an hour for riding lessons it puts it all in perspective. \n On top of this you pay for vets and stallion/semen fees for foals and we look forward to having them so much. $150 for 3+ hours of education is a small price to pay if it is the difference between being able to identify issues and potentially save our mare and or foal.</string>
    <string name="FAQ.Q2.Title">DO I GET A QUALIFICATION FOR ATTENDING YOUR FOALING SEMINAR?</string>
    <string name="FAQ.Q2.Message">\nNo. There is no formal qualification for completing the course. However if you are interested please talk to us and we may be able to direct you towards some more formal training.</string>
    <string name="FAQ.Q3.Title">THERE ISN’T A SEMINAR SCHEDULED FOR MY TOWN – WILL YOU COME HERE?</string>
    <string name="FAQ.Q3.Message">\nWe are happy to travel to deliver training, however we need to be guaranteed a minimum of 6 participants. Please contact us if you think there is enough interest in your area.</string>
    <string name="FAQ.Q4.Title">WHO IS THE TRAINING AIMED AT?</string>
    <string name="FAQ.Q4.Message">\nFoalEd seminars are aimed at people who may or may not know much about horses. This includes: \n – Small breeding operations starting out \n – People breeding for pleasure/personal reasons (e.g. breeding from their favourite mare) \n – People who are interested in learning more about foaling \n – People who may want to get into work in  the Thoroughbred, Standardbred, Sporthorse or any other industry which involves breeding and foaling down of mare.\n – Anyone who wants to be there</string>
    <string name="FAQ.Q5.Title">WHAT WILL I LEARN ABOUT IN A SEMINAR?</string>
    <string name="FAQ.Q5.Message">\nYou can find more information on what is covered in the seminar in the Intro to Foaling Seminar Page.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback_heading">Something to say?</string>
    <string name="feedback_message">Thanks for using FoalEd! We love hearing feedback about your experience on the app. Please email support@foaled.co.nz or submit feedback below!</string>
    <string name="feedback_button">Give feedback</string>
    <string name="notifications">Notifications</string>
    <string name="menu_title">Extras</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="copyright_2017_foaled">Copyright 2017 FoalEd</string>
    <string name="my_favourite_horses">My Favourite Horses</string>
    <string name="edit_pregnancy">Edit Pregnancy</string>
    <string name="conception_date">Conception Date</string>
    <string name="sire_s_name">Sire\'s name</string>
    <string name="save">Save</string>
    <string name="give_birth">Give Birth</string>
    <string name="view_notes">View Notes</string>
    <string name="notes">Notes</string>
    <string name="sire">Sire</string>
    <string name="expected_birth_date">Expected Birth Date</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="notes_about_this_pregnancy">Notes about this pregnancy</string>
    <string name="edit_horse_screen_label">Edit Horse</string>
    <string name="horse_photo">Horse Photo</string>
    <string name="take_image_icon">Take image icon</string>
    <string name="horse_name_label">Name</string>
    <string name="add_horse_name_hint">Name of Horse</string>
    <string name="add_horse_breed_label">Breed</string>
    <string name="add_horse_breed_hint">Breed of Horse</string>
    <string name="add_horse_dam_label">Dam</string>
    <string name="add_horse_dam_hint">Dam of Horse</string>
    <string name="add_horse_age_label">Age</string>
    <string name="add_horse_age_hint">Age</string>
    <string name="add_horse_colour_label">Colour</string>
    <string name="add_horse_colour_hint">Colour of Horse</string>

    <string name="edit_horse_age_placeholder">%1$d</string>
    <string name="add_horse_sire_label">Sire</string>
    <string name="add_horse_sire_hint">Sire\'s name</string>
    <string name="expand_text_section">Expand text section</string>
    <string name="edit_notes_hint">Note</string>
    <string name="notification_page_placeholder_text">This is where any notification settings will live.</string>
    <string name="profile_placeholder_text">THIS IS THE PROFILE PAGE</string>

</resources>
