<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.abc.foaled.Activity.FeedbackActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/feedback_heading"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_message"
        />
    
    <Button
        android:id="@+id/feedback_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center"
        android:text="@string/feedback_button" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/feedback_view"/>


</LinearLayout>

