<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.abc.foaled.Activity.AddNewHorseActivity"
    tools:showIn="@layout/activity_add_new_horse">

    <EditText
        android:id="@+id/add_horse_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/add_markings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="Markings" />

    <EditText
        android:id="@+id/add_notes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="Add notes"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sex_radioButton"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/isFemaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText3"
            android:layout_below="@+id/button8"
            android:layout_marginTop="55dp"
            android:text="@string/female" />

    </RadioGroup>

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:hint="@string/database_results"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"/>



      <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_menu_camera"
        android:id="@+id/imageButton"
        android:contentDescription="Image for horse"
        android:onClick="chooseImage"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@color/cardview_light_background"
            android:id="@+id/imageView3"
            android:layout_below="@+id/imageButton"
            android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/buttonAddHorse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="insert"
        android:text="@string/insert"
        />


    </LinearLayout>


